# slate

./: .gitignore  Cargo.toml  LICENSE  README.md
apps/landing/: index.html  wrangler.jsonc
apps/web/: Cargo.toml  index.html  wrangler.jsonc
apps/web/src/: app.css  app.rs  links.rs  main.rs  markdown.rs  models.rs  note_graph.rs  welcome_note.md
apps/web/src/app/: actions.rs  bindings.rs  constants.rs  helpers.rs
apps/web/src/app/components/: content_panel.rs  editor_pane.rs  ink_canvas.rs  mod.rs  note_header.rs  sidebar.rs  tab_strip.rs  toolbar.rs  upload_rows.rs
apps/web/src/models/: editor_mode.rs  ink.rs  media_asset.rs  mod.rs  note.rs  wiki_link.rs
apps/web/src/store/: db.rs  indexed_db.rs  media_store.rs  mod.rs  note_store.rs
