[package]
name = "slate"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.16", features = ["csr"] }
pulldown-cmark = "0.13"
rexie = "0.6"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
thaw = "0.5.0-beta"
leptos_icons = "0.7.1"
icondata = "0.7.0"